// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryList should render and display a caption 1`] = `
<div>
  <Caption
    title="Willkommen"
  />
  <RemoteContent
    centered={true}
    dangerouslySetInnerHTML={
      Object {
        "__html": "test content",
      }
    }
    onInternalLinkClick={[Function]}
  />
  <CategoryList__List>
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": Map {},
          "_content": "",
          "_id": 0,
          "_lastUpdate": "2017-11-18T19:30:00.000Z",
          "_order": -1,
          "_parentPath": "",
          "_path": "/augsburg/de",
          "_thumbnail": "no_thumbnail",
          "_title": "augsburg",
        }
      }
      key="0"
      subCategories={
        Array [
          CategoryModel {
            "_availableLanguages": Map {
              "en" => "4361",
              "ar" => "4367",
              "fa" => "4368",
            },
            "_content": "",
            "_id": 3650,
            "_lastUpdate": "2017-11-18T19:30:00.000Z",
            "_order": 75,
            "_parentPath": "/augsburg/de",
            "_path": "/augsburg/de/anlaufstellen",
            "_thumbnail": "https://cms.integreat-ap…/03/Hotline-150x150.png",
            "_title": "Anlaufstellen zu sonstigen Themen",
          },
          CategoryModel {
            "_availableLanguages": Map {
              "en" => "4361",
              "ar" => "4367",
              "fa" => "4368",
            },
            "_content": "",
            "_id": 3649,
            "_lastUpdate": "2017-11-18T19:30:00.000Z",
            "_order": 11,
            "_parentPath": "/augsburg/de",
            "_path": "/augsburg/de/willkommen",
            "_thumbnail": "https://cms.integreat-ap…03/Beratung-150x150.png",
            "_title": "Willkommen",
          },
        ]
      }
    />
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": Map {
            "en" => "4361",
            "ar" => "4367",
            "fa" => "4368",
          },
          "_content": "",
          "_id": 3649,
          "_lastUpdate": "2017-11-18T19:30:00.000Z",
          "_order": 11,
          "_parentPath": "/augsburg/de",
          "_path": "/augsburg/de/willkommen",
          "_thumbnail": "https://cms.integreat-ap…03/Beratung-150x150.png",
          "_title": "Willkommen",
        }
      }
      key="3649"
      subCategories={
        Array [
          CategoryModel {
            "_availableLanguages": Map {
              "en" => "390",
              "ar" => "711",
              "fa" => "397",
            },
            "_content": "some content",
            "_id": 35,
            "_lastUpdate": "2017-11-18T19:30:00.000Z",
            "_order": 1,
            "_parentPath": "/augsburg/de/willkommen",
            "_path": "/augsburg/de/willkommen/willkommen-in-augsburg",
            "_thumbnail": "https://cms.integreat-ap…09/heart295-150x150.png",
            "_title": "Willkommen in Augsburg",
          },
        ]
      }
    />
  </CategoryList__List>
</div>
`;

exports[`CategoryList should render and not display a caption 1`] = `
<div>
  <CategoryList__List>
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": Map {},
          "_content": "",
          "_hash": undefined,
          "_lastUpdate": "2017-11-18T19:30:00.000Z",
          "_order": -1,
          "_parentPath": "",
          "_path": "/augsburg/de",
          "_root": undefined,
          "_thumbnail": "no_thumbnail",
          "_title": "augsburg",
        }
      }
      subCategories={
        Array [
          CategoryModel {
            "_availableLanguages": Map {
              "en" => "4361",
              "ar" => "4367",
              "fa" => "4368",
            },
            "_content": "",
            "_hash": undefined,
            "_lastUpdate": "2017-11-18T19:30:00.000Z",
            "_order": 75,
            "_parentPath": "/augsburg/de",
            "_path": "/augsburg/de/anlaufstellen",
            "_root": undefined,
            "_thumbnail": "https://cms.integreat-ap…/03/Hotline-150x150.png",
            "_title": "Anlaufstellen zu sonstigen Themen",
          },
          CategoryModel {
            "_availableLanguages": Map {
              "en" => "4361",
              "ar" => "4367",
              "fa" => "4368",
            },
            "_content": "",
            "_hash": undefined,
            "_lastUpdate": "2017-11-18T19:30:00.000Z",
            "_order": 11,
            "_parentPath": "/augsburg/de",
            "_path": "/augsburg/de/willkommen",
            "_root": undefined,
            "_thumbnail": "https://cms.integreat-ap…03/Beratung-150x150.png",
            "_title": "Willkommen",
          },
        ]
      }
    />
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": Map {
            "en" => "4361",
            "ar" => "4367",
            "fa" => "4368",
          },
          "_content": "",
          "_hash": undefined,
          "_lastUpdate": "2017-11-18T19:30:00.000Z",
          "_order": 11,
          "_parentPath": "/augsburg/de",
          "_path": "/augsburg/de/willkommen",
          "_root": undefined,
          "_thumbnail": "https://cms.integreat-ap…03/Beratung-150x150.png",
          "_title": "Willkommen",
        }
      }
      subCategories={
        Array [
          CategoryModel {
            "_availableLanguages": Map {
              "en" => "390",
              "ar" => "711",
              "fa" => "397",
            },
            "_content": "some content",
            "_hash": undefined,
            "_lastUpdate": "2017-11-18T19:30:00.000Z",
            "_order": 1,
            "_parentPath": "/augsburg/de/willkommen",
            "_path": "/augsburg/de/willkommen/willkommen-in-augsburg",
            "_root": undefined,
            "_thumbnail": "https://cms.integreat-ap…09/heart295-150x150.png",
            "_title": "Willkommen in Augsburg",
          },
        ]
      }
    />
  </CategoryList__List>
</div>
`;
